--- a/public/style.css
+++ b/public/style.css
@@ -2,6 +2,15 @@
   font-family: "Roboto", sans-serif;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Roboto Slab", serif;
+}
+
 body {
   margin: 0;
   padding: 0;
