--- a/src/layout.astro
+++ b/src/layout.astro
@@ -6,10 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Arnaud EVG</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" type="image/svg" href="favicon.svg">
   </head>
   <body>
     <div class="container">
-        <slot />
+      <slot />
     </div>
   </body>
 </html>
