--- a/src/layout.astro
+++ b/src/layout.astro
@@ -10,6 +10,7 @@
   </head>
   <body>
     <div class="container">
+      <nav style="text-align: right"><a href="/"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-home"><path d="m3 9 9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/><polyline points="9 22 9 12 15 12 15 22"/></svg></a></nav>
       <slot />
     </div>
   </body>
