--- a/public/style.css
+++ b/public/style.css
@@ -13,7 +13,8 @@ h6 {
 
 h1 {
   text-decoration: underline;
-  text-underline-offset: 0.5em;
+  padding-bottom: 0.333em;
+  border-bottom: 2px solid black;
 }
 
 body {
